parser/src/test/resources/corpus/valid/32_post_each_allocation.ff
rule "Post Each Allocation" {
  post each allocation to ledger account "Capital Called Receivable"
}
