parser/src/test/resources/corpus/invalid/30_post_missing_target.ff
rule "Post Missing Target" {
  post fee to
}
